feat: add Spring Boot